@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - STDOUT and other output files don't uniformly respond to the -r test on all operating systems. This will need more work.
 
 0.501     2018-12-23 20:51:09-08:00 America/Los_Angeles
   - This will be a known issue for V0.500 and V0.501, until fixed:
